colorful profile + intro text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>jaylene martinez</title>
+  <title>Jaylene Martinez</title>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
@@ -14,19 +15,55 @@
   <div class="container">
     <div class="landing-page">
       <div class="video-container">
-        <video width="700" height="700" loop autoplay muted>
+        <video width="700" height="auto" loop autoplay muted>
           <source src="videos/jaylene.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <p class="welcome-text">wassup this my website</p>
+        <p class="phonetic-text">[jay-leen]</p>
+        <p class="welcome-text">who is jaylene? scroll 2 learn more ...</p>
       </div>
     </div>
-    <div class="paragraph-container">
-      <h2 class="subtext-heading">First Heading</h2>
-      <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus id. Hendrerit gravida rutrum quisque non tellus orci ac. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Sociis natoque penatibus et magnis dis parturient. Tellus elementum sagittis vitae et leo duis ut diam quam. Turpis egestas sed tempus urna et pharetra pharetra. Facilisi cras fermentum odio eu feugiat pretium nibh. Dui faucibus in ornare quam viverra orci. Maecenas accumsan lacus vel facilisis volutpat est velit. Consequat semper viverra nam libero justo laoreet sit amet. Urna molestie at elementum eu facilisis. Mauris ultrices eros in cursus turpis massa tincidunt. Vivamus at augue eget arcu dictum varius. Felis imperdiet proin fermentum leo vel orci porta non pulvinar. Fermentum et sollicitudin ac orci.</p>
-      <h2 class="subtext-heading">Second Heading</h2>
-      <p class="info"> Viverra suspendisse potenti nullam ac tortor vitae. Consequat nisl vel pretium lectus quam id. Sapien et ligula ullamcorper malesuada proin. Sagittis vitae et leo duis ut. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Quis varius quam quisque id diam vel quam. Purus faucibus ornare suspendisse sed. Turpis massa tincidunt dui ut ornare lectus. Posuere urna nec tincidunt praesent semper feugiat. Enim ut sem viverra aliquet eget sit. Sed velit dignissim sodales ut eu sem. Sed turpis tincidunt id aliquet risus feugiat in ante. Leo a diam sollicitudin tempor id eu nisl. Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc.</p>
+    <div class="intro-container">
+      <div class="profile-picture">
+        <div class="profile-overlay"></div>
+      </div>
+      <div class="intro-text">
+        <h1 class="subtext-heading">jaylene is a </h1>
+        <p class="info">i'm a 21 year-old software engineer and amateur artist from Los Angeles.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus id. Hendrerit gravida rutrum
+          quisque non tellus orci ac. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi
+          tristique. Sociis natoque penatibus et magnis dis parturient. Tellus elementum sagittis vitae et leo duis ut
+          diam quam. Turpis egestas sed tempus urna et pharetra pharetra. Facilisi cras fermentum odio eu feugiat
+          pretium
+          nibh. Dui faucibus in ornare quam viverra orci. Maecenas accumsan lacus vel facilisis volutpat est velit.
+          Consequat semper viverra nam libero justo laoreet sit amet. Urna molestie at elementum eu facilisis. Mauris
+          ultrices eros in cursus turpis massa tincidunt. Vivamus at augue eget arcu dictum varius. Felis imperdiet
+          proin
+          fermentum leo vel orci porta non pulvinar. Fermentum et sollicitudin ac orci.
+        </p>
+          
+      </div>
     </div>
+    <div class="intro-container">
+      <div class="intro-text">
+        <h2 class="subtext-heading">Second Heading</h2>
+        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus id. Hendrerit gravida rutrum
+          quisque non tellus orci ac. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi
+          tristique. Sociis natoque penatibus et magnis dis parturient. Tellus elementum sagittis vitae et leo duis ut
+          diam quam. Turpis egestas sed tempus urna et pharetra pharetra. Facilisi cras fermentum odio eu feugiat
+          pretium
+          nibh. Dui faucibus in ornare quam viverra orci. Maecenas accumsan lacus vel facilisis volutpat est velit.
+          Consequat semper viverra nam libero justo laoreet sit amet. Urna molestie at elementum eu facilisis. Mauris
+          ultrices eros in cursus turpis massa tincidunt. Vivamus at augue eget arcu dictum varius. Felis imperdiet
+          proin
+          fermentum leo vel orci porta non pulvinar. Fermentum et sollicitudin ac orci.</p>
+          
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </div>
 </body>
 
