--- a/index.html
+++ b/index.html
@@ -28,20 +28,8 @@
         <div class="profile-overlay"></div>
       </div>
       <div class="intro-text">
-        <h1 class="subtext-heading">jaylene is a </h1>
-        <p class="info">i'm a 21 year-old software engineer and amateur artist from Los Angeles.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus id. Hendrerit gravida rutrum
-          quisque non tellus orci ac. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi
-          tristique. Sociis natoque penatibus et magnis dis parturient. Tellus elementum sagittis vitae et leo duis ut
-          diam quam. Turpis egestas sed tempus urna et pharetra pharetra. Facilisi cras fermentum odio eu feugiat
-          pretium
-          nibh. Dui faucibus in ornare quam viverra orci. Maecenas accumsan lacus vel facilisis volutpat est velit.
-          Consequat semper viverra nam libero justo laoreet sit amet. Urna molestie at elementum eu facilisis. Mauris
-          ultrices eros in cursus turpis massa tincidunt. Vivamus at augue eget arcu dictum varius. Felis imperdiet
-          proin
-          fermentum leo vel orci porta non pulvinar. Fermentum et sollicitudin ac orci.
-        </p>
+        <p class="subtext-heading">is a ...</p>
+        <p class="title">SOFTWARE ENGINEER</p>
           
       </div>
     </div>
